--- a/_includes/controllableVideo.html
+++ b/_includes/controllableVideo.html
@@ -1,8 +1,8 @@
 <video 
     playsinline 
     class="mt-3"
-    muted="true" 
-    poster="{{ site.static_url }}{{ page.video-folder }}thumbnails/{{ include.title }}.png"
+    controls
+    poster="{{ site.static_url }}{{ page.video-folder }}thumbnails/{{ include.title }}.jpg"
     data-src-sd="{{ site.static_url }}{{ page.video-folder }}sd/{{ include.title }}.mp4"
     data-src-hd="{{ site.static_url }}{{ page.video-folder }}hd/{{ include.title }}.webm"
 >
