Video no longer preloads on page load

--- a/_includes/controllableVideo.html
+++ b/_includes/controllableVideo.html
@@ -3,6 +3,7 @@
     class="mt-3"
     controls
     poster="{{ site.static_url }}{{ page.video-folder }}thumbnails/{{ include.title }}.jpg"
+    preload="none"
     data-src-sd="{{ site.static_url }}{{ page.video-folder }}sd/{{ include.title }}.mp4"
     data-src-hd="{{ site.static_url }}{{ page.video-folder }}hd/{{ include.title }}.webm"
 >
