--- a/_includes/video.html
+++ b/_includes/video.html
@@ -3,6 +3,7 @@
     class="mt-3"
     muted="true" 
     poster="{{ site.static_url }}{{ page.video-folder }}thumbnails/{{ include.title }}.png"
+    preload="none"
     data-src-sd="{{ site.static_url }}{{ page.video-folder }}sd/{{ include.title }}.mp4"
     data-src-hd="{{ site.static_url }}{{ page.video-folder }}hd/{{ include.title }}.webm"
 >
