--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,11 +57,8 @@
             <div class="d-flex justify-content-between main-header">
                 <h1 class="main-title"><a href="/">Jean Marc Skopek</a></h1>
                 <ul class="nav main-nav">
+                    <li class="nav-item nav-link {% if page.url contains '/projects' %}active{% endif %}"><a href="/projects/" class="nav-link">Projects</a></li>
                     <li class="nav-item nav-link {% if page.url contains '/posts' %}active{% endif %}"><a href="/posts/" class="nav-link">Writing</a></li>
-                    <li class="nav-item nav-link {% if page.url contains '/timelapses' %}active{% endif %}"><a href="/timelapses/" class="nav-link">Timelapses</a></li>
-                    <li class="nav-item nav-link {% if page.url contains '/drones' %}active{% endif %}"><a href="/drones/" class="nav-link">Drones</a></li>
-                    {% comment %}<li class="nav-item nav-link {% if page.url contains '/photography' %}active{% endif %}"><a href="/photography/" class="nav-link">Photography</a></li>{% endcomment %}
-                    {% comment %}<li class="nav-item nav-link {% if page.url contains '/projects' %}active{% endif %}"><a href="/projects/" class="nav-link">Projects</a></li>{% endcomment %}
                 </ul>
             </div>
             {{ content }}
