--- a/_includes/video.html
+++ b/_includes/video.html
@@ -2,10 +2,10 @@
     playsinline 
     class="mt-3"
     muted="true" 
-    poster="{{ site.static_url }}{{ page.video-folder }}thumbnails/{{ include.title }}.png"
+    poster="{{ site.static_url }}{{ page.video-folder }}/thumbnails/{{ include.title }}.jpg"
     preload="none"
-    data-src-sd="{{ site.static_url }}{{ page.video-folder }}sd/{{ include.title }}.mp4"
-    data-src-hd="{{ site.static_url }}{{ page.video-folder }}hd/{{ include.title }}.webm"
+    data-src-sd="{{ site.static_url }}{{ page.video-folder }}/sd/{{ include.title }}.mp4"
+    data-src-hd="{{ site.static_url }}{{ page.video-folder }}/hd/{{ include.title }}.webm"
 >
-    <source src="{{ site.static_url }}{{ page.video-folder }}sd/{{ include.title }}.mp4">
+    <source src="{{ site.static_url }}{{ page.video-folder }}/sd/{{ include.title }}.mp4">
 </video>
