--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,11 +1,19 @@
-<video 
-    playsinline 
-    class="mt-3"
-    muted="true" 
-    poster="{{ site.static_url }}{{ page.video-folder }}/thumbnails/{{ include.title }}.jpg"
-    preload="none"
-    data-src-sd="{{ site.static_url }}{{ page.video-folder }}/sd/{{ include.title }}.mp4"
-    data-src-hd="{{ site.static_url }}{{ page.video-folder }}/hd/{{ include.title }}.webm"
->
-    <source src="{{ site.static_url }}{{ page.video-folder }}/sd/{{ include.title }}.mp4">
-</video>
+<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/VideoObject">
+    <video 
+        playsinline 
+        class="mt-3"
+        muted="true" 
+        poster="{{ site.static_url }}{{ page.video-folder }}/thumbnails/{{ include.title }}.jpg"
+        preload="none"
+        data-src-sd="{{ site.static_url }}{{ page.video-folder }}/sd/{{ include.title }}.mp4"
+        data-src-hd="{{ site.static_url }}{{ page.video-folder }}/hd/{{ include.title }}.webm"
+    >
+        <source src="{{ site.static_url }}{{ page.video-folder }}/sd/{{ include.title }}.mp4">
+    </video>
+    {% if include.caption %}
+    <figcaption itemprop="description">{{ include.caption }}</figcaption>
+    {% endif %}
+    {% if include.location %}
+    <figcaption itemprop="contentLocation">{{ include.location }}</figcaption>
+    {% endif %}
+</figure>
