--- a/css/main.scss
+++ b/css/main.scss
@@ -17,45 +17,86 @@
 
 @import 'micromodal';
 
-body.dark {
+$taupe: #483C32;
+$carbon-ark: rgb(255, 250, 244);  // Color of Carbon Ark (http://planetpixelemporium.com/tutorialpages/light.html)
+$high-noon-sun: rgb(255, 255, 251);  // Color of High Noon Sun (http://planetpixelemporium.com/tutorialpages/light.html)
+$header: #4183c4;
+
+// overall body colors
+body {
     background-color: #000;
     h1, h2, h3, h4, h5, p { color: #fff; }
     .text-secondary { color: #aaa !important; }
     a { color: #bbb; }
-
-    .main-nav {
-        li a {
-            color: #fff;
-            border-bottom: 2px solid #eee;
-        }
-        li a:hover,
-        li.active a {
-            color: #888;
-            border-bottom: 2px solid #444;
-        }
-    }
-    .main-title {
-        a {
-            color: #fff;
-            background-image: url(/assets/home-logo.png);
-        }
-    }
 }
+
+// light variant
 body.light {
-    background-color: #fff;
-}
-.post {
-    img {
-        max-width: 100%;
+    background-color: $high-noon-sun;
+    h1, h2, h3, h4, h5, p { color: #000; }
+    .text-secondary { color: #444; }
+    li a {
+        color: #444;
+        border-bottom: 2px solid #444;
     }
-    video {
-        width: 100%;
+    li a:hover,
+    li.active a {
+        color: #888;
+        border-bottom: 2px solid #eee;
     }
-    h1 {
-        margin-top: 1em;
+    .main-title a {
+        color: #000;
+        background-image: url(/assets/home-logo-white.png);
     }
+
+
 }
 
+/* header */
+.main-header {
+    margin-bottom: 1em;
+}
+.main-nav {
+    z-index: 2;
+    li {
+        list-style: none;
+        float: left;
+        margin-right: 1em;
+        font-size: 1.5em;
+    }
+    li a {
+        transition: border-bottom .3s, color .4s;
+        color: #fff;
+        border-bottom: 2px solid #eee;
+    }
+    li a:hover,
+    li.active a {
+        text-decoration: none;
+        color: #888;
+        border-bottom: 2px solid #444;
+    }
+}
+.main-title {
+    z-index: 2;
+    a {
+        color: #fff;
+        display: block;
+        background-image: url(/assets/home-logo.png);
+        background-repeat: no-repeat;
+        text-indent: -5000px;
+        background-size: cover;
+        width: 264px;
+        height: 72px;
+    }
+    a:hover {
+        text-decoration: none;
+    }
+}
+/* end header */
+
+
+
+// home page
 .home-photo {
     position: absolute;
     bottom: 0;
@@ -87,46 +128,6 @@ body.light {
     }
     a:hover span {
         border-bottom: 2px solid #444;
-    }
-}
-.main-header {
-    margin-bottom: 1em;
-}
-.main-nav {
-    z-index: 2;
-    li {
-        list-style: none;
-        float: left;
-        margin-right: 1em;
-        font-size: 1.5em;
-    }
-    li a {
-        color: #444;
-        border-bottom: 2px solid #444;
-        transition: border-bottom .3s, color .4s;
-    }
-    li a:hover,
-    li.active a {
-        text-decoration: none;
-        color: #888;
-        border-bottom: 2px solid #eee;
-    }
-}
-.main-title {
-    z-index: 2;
-    a {
-        color: #000;
-
-        display: block;
-        background-image: url(/assets/home-logo-white.png);
-        background-repeat: no-repeat;
-        text-indent: -5000px;
-        background-size: cover;
-        width: 264px;
-        height: 72px;
-    }
-    a:hover {
-        text-decoration: none;
     }
 }
 .container {
@@ -165,6 +166,104 @@ body.light {
 }
 
 
+.modal__overlay {
+    z-index: 2;
+
+    .modal__container {
+        max-width: 94%;
+        padding: 0;
+        background: #000;
+
+        video {
+            width: 100%;
+        }
+    }
+}
+
+.timelapse-item {
+    img {
+        max-width: 100%;
+        border-radius: 4px;
+    }
+    .timelapse-summary {
+        text-align: center;
+    }
+}
+
+// post
+.post {
+    p {
+        max-width: 600px;
+        margin: 0em auto;
+        padding: 0;
+    }
+    video {
+        margin: 4em 0;
+        width: 100%;
+    }
+    a {
+        text-decoration: underline;
+    }
+    img {
+        max-width: 100%;
+    }
+    h1 {
+        margin-top: 1em;
+    }
+    .button-quality {
+        width: 100px;
+        margin: 0.67em 0;
+        position: fixed;
+        bottom: 10px;
+        right: 30px;
+        border: 8px solid rgba(255, 255, 255, 0.3);
+        border-radius: 4px;
+        cursor: pointer;
+
+        &.switch-light.switch-candy span span, .switch-light.switch-candy input:checked ~ span span:first-child, .switch-toggle.switch-candy label,
+        &.switch-light.switch-candy input ~ span span:first-child, .switch-light.switch-candy input:checked ~ span span:nth-child(2), .switch-candy input:checked + label {
+            text-shadow: none;
+            color: #214689;
+        }
+
+        &.switch-light.switch-candy > span {
+            background-color: $high-noon-sun;
+        }
+    }
+}
+
+// list of all posts
+.posts {
+    .post-summary {
+        margin-bottom: 1em;
+    }
+}
+
+// mobile
+@media only screen 
+and (max-device-width : 667px) { 
+    .page-header,
+    .main-content {
+        max-width: 100%;
+    }
+    h1, h2, h3, h4, p, .site-footer {
+        padding: 0 1em;
+    }
+    video {
+        margin: 2em 0;
+    }
+    .page-header {
+        padding-top: 1em; 
+    }
+    .page-header .project-name a {
+        font-size: 0.8rem; 
+    }
+    .button-quality {
+        display: none;
+    }
+}
+
+
 //@import './bootstrap-4.1.3/scss/bootstrap';
 //@import "./bootstrap-4.1.3/scss/forms";
 //@import "./bootstrap-4.1.3/scss/buttons";
@@ -190,29 +289,3 @@ body.light {
 //@import "./bootstrap-4.1.3/scss/popover";
 //@import "./bootstrap-4.1.3/scss/carousel";
 //@import "./bootstrap-4.1.3/scss/print";
-
-
-
-.modal__overlay {
-    z-index: 2;
-
-    .modal__container {
-        max-width: 94%;
-        padding: 0;
-        background: #000;
-
-        video {
-            width: 100%;
-        }
-    }
-}
-
-.timelapse-item {
-    img {
-        max-width: 100%;
-        border-radius: 4px;
-    }
-    .timelapse-summary {
-        text-align: center;
-    }
-}
