Settling on JPEG as the standard image type

--- a/_includes/video.html
+++ b/_includes/video.html
@@ -3,7 +3,7 @@
         playsinline 
         class="mt-3"
         muted="true" 
-        poster="{{ site.static_url }}{{ page.video-folder }}/thumbnails/{{ include.title }}.jpg"
+        poster="{{ site.static_url }}{{ page.video-folder }}/thumbnails/{{ include.title }}.jpeg"
         preload="none"
         data-src-sd="{{ site.static_url }}{{ page.video-folder }}/sd/{{ include.title }}.mp4"
         data-src-hd="{{ site.static_url }}{{ page.video-folder }}/hd/{{ include.title }}.webm"
