--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
       <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
       <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Rubik|Russo+One&display=swap" rel="stylesheet">
       <script src="https://use.fortawesome.com/d67f9c0e.js"></script>
       <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
