--- a/css/main.scss
+++ b/css/main.scss
@@ -246,10 +246,37 @@ body.light {
 // list of all posts
 .posts {
     .post-summary {
-        margin-bottom: 1em;
+        margin-bottom: 4em;
+        a:hover {
+            text-decoration: none;
+        }
         
-        img {
-            max-width: 100%;
+        .thumbnail {
+            border-radius: 4px;
+            margin-bottom: 1em;
+
+            img {
+                border-radius: 4px;
+                max-width: 100%;
+            }
+
+            &.thumbnail-background {
+                padding: 2em;
+                text-align: center;
+                img {
+                    max-height: 150px;
+                }
+            }
+        }
+
+        .post-head {
+            display: flex;
+            justify-content: space-between;
+
+            .date {
+                white-space: nowrap;
+                margin-left: 1.2em;
+            }
         }
     }
 }
