--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 
       </script>
     </head>
-    <body class="{{ page.body_class }}">
+    <body class="light {{ page.body_class }}">
         <div class="container">
             <div class="d-flex justify-content-between main-header">
                 <h1 class="main-title"><a href="/">Jean Marc Skopek</a></h1>
