--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,8 @@ body {
 
     h1, h2, h3, h4, h5 { 
         color: #fff; 
-        font-family: Russo One;
+        // font-family: Russo One;
+        font-family: Rubik;
     }
 
     p {
@@ -43,7 +44,7 @@ body {
 
 // light variant
 body.light {
-    background-color: $high-noon-sun;
+    background-color: #fbfbfb;
     h1, h2, h3, h4, h5, p { color: #000; }
     .text-secondary { color: #444; }
     li a {
@@ -65,7 +66,7 @@ body.light {
 
 /* header */
 .main-header {
-    margin-bottom: 1em;
+    margin-bottom: 4em;
 }
 .main-nav {
     z-index: 2;
@@ -127,11 +128,11 @@ body.light {
     a, a:hover { text-decoration: none; }
 
     a {
-        color: #eee;
+        color: #888;
         transition: color .4s;
     }
     a:hover {
-        color: #888;
+        color: #333;
     }
     a span {
         border-bottom: 2px solid #bbb;
@@ -220,6 +221,14 @@ body.light {
     }
     h1 {
         margin-top: 1em;
+    }
+    blockquote {
+        border-left: 3px solid #eee;
+        padding: 0 1em;
+        margin: 1em;
+        p {
+            color: #d5d5d5;
+        }
     }
     .button-quality {
         width: 100px;
