Adding writing to drone and timelapse articles

--- a/css/main.scss
+++ b/css/main.scss
@@ -210,7 +210,7 @@ body.light {
         // padding: 0;
     }
     video {
-        margin: 4em 0;
+        // margin: 4em 0; // not sure about this
         width: 100%;
     }
     a {
