--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,7 @@ $header: #4183c4;
 // overall body colors
 body {
     background-color: #000;
-    .text-secondary { color: #aaa !important; }
+    .text-secondary { color: #aaa; }
     a { color: #bbb; }
 
     h1, h2, h3, h4, h5 { 
@@ -60,8 +60,6 @@ body.light {
         color: #000;
         background-image: url(/assets/home-logo-white.png);
     }
-
-
 }
 
 /* header */
@@ -156,9 +154,10 @@ body.light {
 .gallery {
     figure {
         margin: 0;
-    }
-    figure img {
-        margin-bottom: 1rem;
+
+        figcaption {
+            color: #555;
+        }
     }
     .gallery-tiled {
         display: flex;
@@ -169,11 +168,6 @@ body.light {
     .gallery-image {
         text-align: center;
 
-    }
-    figcaption {
-        margin-bottom: 1rem;
-        text-align: left;
-        color: #fff;
     }
 }
 
@@ -227,7 +221,7 @@ body.light {
         padding: 0 1em;
         margin: 1em;
         p {
-            color: #d5d5d5;
+            color: #241616;
         }
     }
     .button-quality {
@@ -250,41 +244,67 @@ body.light {
             background-color: $high-noon-sun;
         }
     }
+    iframe {
+        max-width: 100%;
+    }
 }
 
 // list of all posts
 .posts {
-    .post-summary {
-        margin-bottom: 4em;
-        a:hover {
-            text-decoration: none;
+    .featured-posts {
+        border-bottom: 1px solid #f0f0f0;
+
+    }
+    a:hover {
+        text-decoration: none;
+    }
+
+    // animate text transition
+    a {
+        .text-secondary, .text-gray { 
+            transition: color .3s; 
         }
-        
+        &:hover {
+            .text-secondary {
+                color: #000 !important;
+            } 
+            .text-gray { 
+                color: #888 !important;
+            }
+        }
+    }
+
+    // animate box shadow
+    a {
         .thumbnail {
+            box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+            transition: box-shadow .5s;
+        }
+        &:hover .thumbnail {
+            box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+        }
+    }
+
+    .thumbnail {
+        border-radius: 4px;
+
+        img {
             border-radius: 4px;
-            margin-bottom: 1em;
-
-            img {
-                border-radius: 4px;
-                max-width: 100%;
-            }
-
-            &.thumbnail-background {
-                padding: 2em;
-                text-align: center;
-                img {
-                    max-height: 150px;
-                }
-            }
+            object-fit: cover;
+            width: 100%;
+            height: 180px;
         }
 
-        .post-head {
-            display: flex;
-            justify-content: space-between;
+        &.thumbnail-large img {
+            height: 280px;
+        }
 
-            .date {
-                white-space: nowrap;
-                margin-left: 1.2em;
+        &.thumbnail-background {
+            padding: 2em;
+            text-align: center;
+            img {
+                max-height: 150px;
+                width: auto;
             }
         }
     }
