--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,13 +52,17 @@
 
       </script>
     </head>
-    <body class="light {{ page.body_class }}">
+    <body class="{{ page.body_class }}">
         <div class="container">
             <div class="d-flex justify-content-between main-header">
                 <h1 class="main-title"><a href="/">Jean Marc Skopek</a></h1>
-                <ul class="nav main-nav">
-                    <li class="nav-item nav-link {% if page.url contains '/projects' %}active{% endif %}"><a href="/projects/" class="nav-link">Projects</a></li>
-                    <li class="nav-item nav-link {% if page.url contains '/posts' %}active{% endif %}"><a href="/posts/" class="nav-link">Writing</a></li>
+                <ul class="main-nav">
+                    <li class="">
+                        <a href="/projects/" class="{% if page.url contains '/projects' %}active{% endif %}">Projects</a>
+                    </li>
+                    <li class="">
+                        <a href="/posts/" class="{% if page.url contains '/posts' %}active{% endif %}">Writing</a>
+                    </li>
                 </ul>
             </div>
             {{ content }}
