--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,4 +1,14 @@
 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/VideoObject" class="mb-4">
+    {% if include.path %}
+    <video 
+        playsinline 
+        class="mt-3"
+        muted="true" 
+        preload="none"
+    >
+        <source src="{{ site.static_url }}{{ page.video-folder }}/{{ include.path }}">
+    </video>
+    {% else if include.title %}
     <video 
         playsinline 
         class="mt-3"
@@ -10,6 +20,7 @@
     >
         <source src="{{ site.static_url }}{{ page.video-folder }}/sd/{{ include.title }}.mp4">
     </video>
+    {% endif %}
     {% if include.caption or include.location %}
     <div class="d-flex">
         {% if include.caption %}<figcaption itemprop="description">{{ include.caption }}</figcaption>{% endif %}
